event class changed, notification manager updates